# gcache

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
benchmarks/: bench_ghost.cpp  bench_lru.cpp  bench_shared.cpp  util.h  workload.h
include/gcache/: ghost_cache.h  ghost_kv_cache.h  handle.h  handle_table.h  hash.h  lru_cache.h  node.h  shared_cache.h  stat.h  table.h
scripts/: parse.py  parse_perf.py  plot_motiv.py  plot_perf.py  plot_util.py  run_motiv.sh  run_perf.sh
tests/: test_ghost.cpp  test_ghost_kv.cpp  test_lru.cpp  test_shared.cpp  test_trace.cpp  util.h
